# beeline

./: CMakeLists.txt  LICENSE
applications/: CMakeLists.txt  config.toml  make_graph.cpp  tracking_experiment.cpp
include/: averaging.h  pose_graph.h  state_measurement_model.h  tag_data.h
src/: averaging.cpp  input_output.cpp
